# pyx500r

./: .gitignore  README.md  pyproject.toml
docs/: API.md  API_REFERENCE.py  BLOB_GAP_PARSING.md  DECOMPILE_SUMMARY.md  GUI_INTEGRATION.md  LBP_FORMAT.md  LBP_SNAPSHOT_FORMAT.md  QSESSION_DATA_MODEL.md  QSESSION_FORMAT.md  RTPARTS_COMPOUND_PARSING.md  types.ts
examples/: README.md
examples/library_browser/: README.md  __init__.py  app.py  library_db.py  requirements.txt
examples/library_browser/static/: app.js  index.html  styles.css
examples/server/: README.md  __init__.py  app.py  pool.py  requirements.txt  serializers.py
src/pyx500r/: __init__.py  _cli_common.py  binaryformatter.py  bridge.py  centroid.py  centroid_fallback.py  centroid_new.py  cli.py  cli_bridge.py  cli_parallel.py  crypto.py  index.py  index_builder.py  lbp_reader.py  libsearch.py  libsearch_cli.py  models.py  qsession.py  reader.py  rtparts.py  tof.py  w2searcher.py  wiff_gui.py  xic_gap.py
tests/: __init__.py  test_centroid.py  test_centroid_fallback.py  test_cli.py  test_cli_common.py  test_examples.py  test_index.py  test_suite.py
